//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  role String [not null]
  doctorNumber Int [unique]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  patients PatientOnDoctor [not null]
  tasksAssined Task [not null]
  taskAssignments TaskAssignment [not null]
}

Table Patient {
  id String [pk]
  name String [not null]
  phone String [not null]
  address String [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  doctors PatientOnDoctor [not null]
}

Table Task {
  id String [pk]
  title String [not null]
  description String
  completed Boolean [not null, default: false]
  creatorId String [not null]
  deadline DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  Creator User [not null]
  Assignments TaskAssignment [not null]
  Resources TaskResource [not null]
}

Table PatientOnDoctor {
  id String [pk]
  createdAt DateTime [default: `now()`]
  doctorId String [not null]
  patientId String [not null]
  Doctor User [not null]
  Patient Patient [not null]

  indexes {
    (doctorId, patientId) [unique]
  }
}

Table TaskAssignment {
  id String [pk]
  taskId String [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`]
  Task Task [not null]
  User User [not null]

  indexes {
    (taskId, userId) [unique]
  }
}

Table TaskResource {
  id String [pk]
  originalName String [not null]
  filename String [not null]
  mimetype String [not null]
  size Int [not null]
  path String [not null]
  taskId String [not null]
  resourceTypeId String [not null]
  resourceType String [not null]
  createdAt DateTime [default: `now()`]
  Task Task [not null]
  ResourceType ResourceType [not null]
}

Table ResourceType {
  id String [pk]
  type String [not null]
  createdAt DateTime
  TaskResource TaskResource [not null]
}

Ref: Task.creatorId > User.id

Ref: PatientOnDoctor.doctorId > User.id

Ref: PatientOnDoctor.patientId > Patient.id

Ref: TaskAssignment.taskId > Task.id

Ref: TaskAssignment.userId > User.id

Ref: TaskResource.taskId > Task.id

Ref: TaskResource.resourceTypeId > ResourceType.id